<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailUserActivity">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvNameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar"
        tools:text="Jake Wharton" />

    <TextView
        android:id="@+id/tvCompanyDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar"
        app:layout_constraintTop_toBottomOf="@+id/tvNameDetail"
        tools:text="Google, Inc." />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDetail"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCompanyDetail"
        app:layout_constraintWidth_percent=".80">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvRepositoryLabelDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repository"
                app:layout_constraintBottom_toTopOf="@+id/tvRepositoryDetail"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRepositoryDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvRepositoryLabelDetail"
                app:layout_constraintStart_toStartOf="@+id/tvRepositoryLabelDetail"
                app:layout_constraintTop_toBottomOf="@+id/tvRepositoryLabelDetail"
                tools:text="102" />

            <View
                android:id="@+id/view"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:background="#AEAEAE"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvFollowerLabelDetail"
                app:layout_constraintHeight_percent=".80"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvRepositoryLabelDetail"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFollowerLabelDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follower"
                app:layout_constraintBottom_toTopOf="@+id/tvFollowerDetail"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFollowerDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvFollowerLabelDetail"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/tvFollowerLabelDetail"
                app:layout_constraintTop_toBottomOf="@+id/tvFollowerLabelDetail"
                tools:text="56995" />

            <View
                android:id="@+id/view2"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:background="#AEAEAE"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvFollowingLabelDetail"
                app:layout_constraintHeight_percent=".80"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvFollowerLabelDetail"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFollowingLabelDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                app:layout_constraintBottom_toTopOf="@+id/tvFollowingDetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFollowingDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvFollowingLabelDetail"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/tvFollowingLabelDetail"
                app:layout_constraintTop_toBottomOf="@+id/tvFollowingLabelDetail"
                tools:text="12" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvDetailUserLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/detail_user"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDetail" />

    <TextView
        android:id="@+id/tvUsernameLabelDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="@+id/tvDetailUserLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailUserLabel" />

    <TextView
        android:id="@+id/tvUsernameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvUsernameLabelDetail"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameLabelDetail"
        tools:text="JakeWharton" />

    <TextView
        android:id="@+id/tvLocationLabelDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="@+id/tvUsernameDetail"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameDetail" />

    <TextView
        android:id="@+id/tvLocationDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvLocationLabelDetail"
        app:layout_constraintTop_toBottomOf="@+id/tvLocationLabelDetail"
        tools:text="Pittsburgh, PA, USA" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabOpenGithub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/btnShare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnShare"
        app:srcCompat="@drawable/github_logo_white"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/to_open_github_profile" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnShare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/purple_500"
        android:gravity="center"
        android:text="@string/share"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fabOpenGithub"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".50" />

</androidx.constraintlayout.widget.ConstraintLayout>